--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,27 @@
   color: #61dafb;
 }
 
+.scrollview-data {
+  /* background-color: rgb(202, 217, 245); */
+  background-color: powderblue;
+  border:2px solid  powderblue;
+  border-collapse: collapse;
+  border-radius: 5px;
+  width: 90%;
+  height: 40vh;
+  align-content: center;
+  margin-top: 20px;
+  margin-left:auto; 
+  margin-right:auto;
+  padding: 20px;
+}
+
+.advert-row:hover {
+  background-color: rgb(164, 216, 235);
+  border-radius: 5px;
+  color: #2aacc9;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
