--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,6 +49,35 @@
   color: #2aacc9;
 }
 
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: lightgray;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-inner {
+  position: relative;
+  padding: 35px;
+  max-width: 650px;
+  background-color: lightgreen;
+}
+
+.popup-inner .close-btn {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+
+}
+
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
