--- a/client/src/App.css
+++ b/client/src/App.css
@@ -55,7 +55,7 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: lightgray;
+  background-color: rgb(33, 33, 33, 0.7);
 
   display: flex;
   justify-content: center;
