--- a/client/src/App.css
+++ b/client/src/App.css
@@ -64,9 +64,11 @@
 
 .popup-inner {
   position: relative;
+  border-radius: 5px;
+  border: 1px solid black;
   padding: 35px;
   max-width: 650px;
-  background-color: lightgreen;
+  background-color: lightgrey;
 }
 
 .popup-inner .close-btn {
