--- a/client/src/App.css
+++ b/client/src/App.css
@@ -69,7 +69,7 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: rgb(33, 33, 33, 0.7);
+  background-color: rgb(176, 224, 330, 0.7);
 
   display: flex;
   justify-content: center;
@@ -79,10 +79,10 @@
 .popup-inner {
   position: relative;
   border-radius: 5px;
-  border: 1px solid black;
+  border: 1px solid blue;
   padding: 35px;
   max-width: 650px;
-  background-color: lightgrey;
+  background-color: rgb(159, 166, 236);
 }
 
 .popup-inner .close-btn {
@@ -146,3 +146,19 @@
   cursor: pointer;
 }
 
+
+
+.user-area {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+
+.user-area button {
+  background: powderblue;
+  color: black;
+  border: 0;
+  padding: 7px;
+  border-radius: 5px;
+  cursor: pointer;
+}
