--- a/client/src/App.css
+++ b/client/src/App.css
@@ -212,3 +212,14 @@
   border-radius: 5px;
   cursor: pointer;
 }
+
+.card {
+  width: 250px;
+  height: 150px;
+  background: white;
+  font-size: 30px;
+  margin: 15px 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
